@@ -1,0 +1,8 @@
+==> svc0/output <==
+svc0 ran
+
+==> svc1/output <==
+svc1 ran
+
+==> svc2/output <==
+svc2 ran
